--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="anime-grid">
 
             <div class="anime-card">
-                <img src="王道.jpeg" alt="アニメ画像">
+                <img src="oudou.webp" alt="アニメ画像">
                 <h3>おすすめ王道アニメ！</h3>
                 <p>個人的に好きな王道アニメを紹介します！</p>
             </div>
