--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
             
 
             <div class="anime-card">
-                <img src="マイナー.avif"アニメ画像">
+                <img src="minor.webp"アニメ画像">
                 <h3>おすすめマイナーアニメ！</h3>
                 <p>個人的に好きなマイナーアニメを紹介します！</p>
             </div>
 
             <div class="anime-card">
-                <img src="今季２.jpeg">
+                <img src="konki.webp">
                 <h3>今季アニメ紹介！</h3>
                 <p>現在放送しているアニメについて主観と周りの意見の二つを交えて口コミや評価などを記載しています！今季アニメまだ手をつけれてない人は必見です</p>
             </div>
@@ -146,31 +146,31 @@
             
 
             <div class="anime-card">
-                <img src="来季.jpeg" alt="アニメ画像">
+                <img src="raiki.webp" alt="アニメ画像">
                 <h3>来季アニメ紹介</h3>
                 <p>次のシーズンに放送予定のアニメを紹介します。主観と周りの意見二つを交えて評価や期待度などを記載しています。来季アニメが気になる人はぜひ見ていってください！</p>
             </div>
 
             <div class="anime-card">
-                <img src="アニメグッズ.jpg" alt="アニメ画像">
+                <img src="guzzu.webp" alt="アニメ画像">
                 <h3>アニメグッズ</h3>
                 <p>色々なアニメグッズを紹介していきます。推しグッズ注目！</p>
             </div>
 
             <div class="anime-card">
-                <img src="聖地２.jpg" alt="アニメ画像">
+                <img src="seiti.webp" alt="アニメ画像">
                 <h3>聖地巡礼</h3>
                 <p>アニメの聖地を紹介していきます。</p>
             </div>
 
             <div class="anime-card">
-                <img src="掲示板.jpeg" alt="アニメ画像">
+                <img src="keijiban.webp" alt="アニメ画像">
                 <h3>アニアニ感想サイト</h3>
                 <p>アニメについての感想や評価などを投稿する場所です</p>
             </div>
 
             <div class="anime-card">
-                <img src="極秘.webp" alt="アニメ画像">
+                <img src="gokuhi.webp" alt="アニメ画像">
                 <h3>アニアニ特別限定アニメ情報！</h3>
                 <p>最新のアニメ情報を記載しています！</p>
             </div>
