--- a/index.html
+++ b/index.html
@@ -4,108 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>「アニアニ！」</title>
-    <style>
-        body {
-            font-family: 'Hiragino Sans', 'Noto Sans JP', sans-serif;
-            margin: 0;
-            background: #f3f3f3;
-            color: #333;
-        }
-
-        /* --- HEADER --- */
-        header {
-            background: #2d2f7f;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .title {
-            font-size: 80px;
-            margin: 0;
-        }
-
-        .subtitle {
-            font-size: 40px;
-            margin: 10px 0;
-        }
-
-        nav {
-            width: 100%;
-        }
-
-        /* 左寄せジャンル選択 */
-        .box {
-            border: 2px solid #000;
-            padding: 8px 15px;
-            display: block;
-            width: fit-content;
-            margin-left: 20px; /* 左へ寄せる */
-            background: #fff;
-            color: #000;
-            font-weight: bold;
-            border-radius: 8px;
-        }
-
-        /* --- アニメ一覧全体を囲む --- */
-        .anime-list-wrapper {
-            max-width: 1300px;
-            margin: 50px auto;
-            padding: 25px;
-            background: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 3px 12px rgba(0,0,0,0.15);
-        }
-
-        .anime-list-wrapper h2 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        /* --- グリッドで4つ並べる --- */
-        .anime-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 25px;
-        }
-
-        /* --- カードデザイン --- */
-        .anime-card {
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-            padding: 5px;
-            text-align: center;
-        }
-
-        .anime-card img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        
-
-
-
-
-        /* --- About --- */
-        .about {
-            background: #fff;
-            padding: 40px 20px;
-            text-align: center;
-            max-width: 1200px;
-            margin: 40px auto;
-            border-radius: 12px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #2d2f7f;
-            color: white;
-            margin-top: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
